optimize checking win condition

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <div class="popupContainer2">
                     <div class="playerInput">
                         <label for="player1"><b>Player 1</b></label>
-                        <input type="text" placeholder="Christie?" name="player1" class="player1" required>
+                        <input type="text" placeholder="input name..." name="player1" class="player1" required>
                     </div>
 
                     <button class="start">Start</button>
                     
                     <div class="playerInput">
                         <label for="player2"><b>Player 2</b></label>
-                        <input type="text" placeholder="Abigail?" name="player2" class="player2" required>
+                        <input type="text" placeholder="input name..." name="player2" class="player2" required>
                     </div>
                 </div>
                 
